// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildLeaderboards buildLeaderboards - main / completeLineupLeaderboard / completePlayerLeaderboard 1`] = `
Array [
  Object {
    "adj_prod_margin_rank": 1,
    "adj_rapm_margin_rank": 1,
    "adj_rapm_prod_margin_rank": 1,
    "adj_rtg_margin_rank": 1,
    "code": "AnCowan",
    "conf": "Big Ten Conference",
    "def_2prim": Object {
      "value": 0.005065856129685917,
    },
    "def_adj_opp": Object {
      "value": 96.60184357541898,
    },
    "def_adj_prod": Object {
      "old_value": -1.4896988746032713,
      "override": "Luck adjusted",
      "value": -1.4031925037071773,
    },
    "def_adj_prod_rank": 2,
    "def_adj_rapm_prod_rank": 1,
    "def_adj_rapm_rank": 1,
    "def_adj_rtg": Object {
      "old_value": -1.7318789709773228,
      "override": "Luck adjusted",
      "value": -1.6313092738629251,
    },
    "def_adj_rtg_rank": 2,
    "def_ftr": Object {
      "value": 0.024636871508379884,
    },
    "def_orb": Object {
      "value": 0.096,
    },
    "def_rtg": Object {
      "old_value": 98.84955759282161,
      "override": "Luck adjusted",
      "value": 99.38322763133561,
    },
    "def_team_poss": Object {
      "value": 1790,
    },
    "def_team_poss_pct": Object {
      "value": 0.8601633829889476,
    },
    "def_to": Object {
      "value": 0.01675977653631285,
    },
    "doc_count": 486,
    "duration_mins": Object {
      "value": 900,
    },
    "key": "Cowan, Anthony",
    "off_2p": Object {
      "value": 0.45604395604395603,
    },
    "off_2p_ast": Object {
      "value": 0,
    },
    "off_2pmid": Object {
      "value": 0.27692307692307694,
    },
    "off_2pmid_ast": Object {
      "value": 0,
    },
    "off_2pmidr": Object {
      "value": 0.18258426966292135,
    },
    "off_2prim": Object {
      "value": 0.5555555555555556,
    },
    "off_2prim_ast": Object {
      "value": 0.26153846153846155,
    },
    "off_2primr": Object {
      "value": 0.32865168539325845,
    },
    "off_3p": Object {
      "value": 0.3218390804597701,
    },
    "off_3p_ast": Object {
      "value": 0.625,
    },
    "off_3pr": Object {
      "value": 0.4887640449438202,
    },
    "off_adj_opp": Object {
      "value": 108.03972067039106,
    },
    "off_adj_prod": Object {
      "value": 5.0070555249708235,
    },
    "off_adj_prod_rank": 1,
    "off_adj_rapm_prod_rank": 1,
    "off_adj_rapm_rank": 1,
    "off_adj_rtg": Object {
      "old_value": undefined,
      "override": undefined,
      "value": 5.771173321511876,
    },
    "off_adj_rtg_rank": 1,
    "off_assist": Object {
      "value": 0.2916666666666667,
    },
    "off_ast_3p": Object {
      "value": 0.47619047619047616,
    },
    "off_ast_mid": Object {
      "value": 0.06802721088435375,
    },
    "off_ast_rim": Object {
      "value": 0.4557823129251701,
    },
    "off_efg": Object {
      "value": 0.4691011235955056,
    },
    "off_ft": Object {
      "value": 0.8113207547169812,
    },
    "off_ftr": Object {
      "value": 0.5955056179775281,
    },
    "off_orb": Object {
      "value": 0.017276422764227643,
    },
    "off_poss": Object {
      "value": 451.4845238095238,
    },
    "off_rtg": Object {
      "old_value": undefined,
      "override": undefined,
      "value": 116.5274146893099,
    },
    "off_scramble_2p": Object {
      "value": 0.5555555555555556,
    },
    "off_scramble_2p_ast": Object {
      "value": 0,
    },
    "off_scramble_2pmid": Object {
      "value": 0.25,
    },
    "off_scramble_2pmid_ast": Object {
      "value": 0,
    },
    "off_scramble_2pmidr": Object {
      "value": 0.18181818181818182,
    },
    "off_scramble_2prim": Object {
      "value": 0.8,
    },
    "off_scramble_2prim_ast": Object {
      "value": 0,
    },
    "off_scramble_2primr": Object {
      "value": 0.22727272727272727,
    },
    "off_scramble_3p": Object {
      "value": 0.46153846153846156,
    },
    "off_scramble_3p_ast": Object {
      "value": 0.8333333333333334,
    },
    "off_scramble_3pr": Object {
      "value": 0.5909090909090909,
    },
    "off_scramble_assist": Object {
      "value": 0.9090909090909091,
    },
    "off_scramble_efg": Object {
      "value": 0.6363636363636364,
    },
    "off_scramble_ft": Object {
      "value": 0.9166666666666666,
    },
    "off_scramble_ftr": Object {
      "value": 0.5454545454545454,
    },
    "off_team_poss": Object {
      "value": 1802,
    },
    "off_team_poss_pct": Object {
      "value": 0.8675974963890226,
    },
    "off_to": Object {
      "value": 0.1528291588331615,
    },
    "off_trans_2p": Object {
      "value": 0.5625,
    },
    "off_trans_2p_ast": Object {
      "value": 0,
    },
    "off_trans_2pmid": Object {
      "value": 0.5,
    },
    "off_trans_2pmid_ast": Object {
      "value": 0,
    },
    "off_trans_2pmidr": Object {
      "value": 0.03636363636363636,
    },
    "off_trans_2prim": Object {
      "value": 0.5666666666666667,
    },
    "off_trans_2prim_ast": Object {
      "value": 0.29411764705882354,
    },
    "off_trans_2primr": Object {
      "value": 0.5454545454545454,
    },
    "off_trans_3p": Object {
      "value": 0.34782608695652173,
    },
    "off_trans_3p_ast": Object {
      "value": 0.625,
    },
    "off_trans_3pr": Object {
      "value": 0.41818181818181815,
    },
    "off_trans_assist": Object {
      "value": 1.4615384615384615,
    },
    "off_trans_efg": Object {
      "value": 0.5454545454545454,
    },
    "off_trans_ft": Object {
      "value": 0.8235294117647058,
    },
    "off_trans_ftr": Object {
      "value": 1.5454545454545454,
    },
    "off_usage": Object {
      "value": 0.250546350615718,
    },
    "posClass": "s-PG",
    "posConfidences": Array [
      0.7573493221063862,
      0.23785653498514026,
      0.004535396666879756,
      0.00025873437114051626,
      1.1870453146996361e-8,
    ],
    "team": "Maryland",
    "year": "2020/21",
  },
  Object {
    "adj_prod_margin_rank": 2,
    "adj_rapm_margin_rank": 2,
    "adj_rapm_prod_margin_rank": 2,
    "adj_rtg_margin_rank": 2,
    "code": "AaWiggins",
    "conf": "Big Ten Conference",
    "def_2prim": Object {
      "value": 0.016290726817042606,
    },
    "def_adj_opp": Object {
      "value": 96.76946308724833,
    },
    "def_adj_prod": Object {
      "old_value": -2.1509537300238764,
      "override": "Luck adjusted",
      "value": -1.9263580575074084,
    },
    "def_adj_prod_rank": 1,
    "def_adj_rapm_prod_rank": 2,
    "def_adj_rapm_rank": 2,
    "def_adj_rtg": Object {
      "old_value": -3.0041172564964342,
      "override": "Luck adjusted",
      "value": -2.69043699172679,
    },
    "def_adj_rtg_rank": 1,
    "def_ftr": Object {
      "value": 0.022550335570469794,
    },
    "def_orb": Object {
      "value": 0.1380952380952381,
    },
    "def_rtg": Object {
      "old_value": 91.88787789273368,
      "override": "Luck adjusted",
      "value": 93.54860666651514,
    },
    "def_team_poss": Object {
      "value": 1490,
    },
    "def_team_poss_pct": Object {
      "value": 0.7160019221528111,
    },
    "def_to": Object {
      "value": 0.0174496644295302,
    },
    "doc_count": 421,
    "duration_mins": Object {
      "value": 800,
    },
    "key": "Wiggins, Aaron",
    "off_2p": Object {
      "value": 0.45112781954887216,
    },
    "off_2p_ast": Object {
      "value": 0,
    },
    "off_2pmid": Object {
      "value": 0.24324324324324326,
    },
    "off_2pmid_ast": Object {
      "value": 0.3333333333333333,
    },
    "off_2pmidr": Object {
      "value": 0.24666666666666667,
    },
    "off_2prim": Object {
      "value": 0.711864406779661,
    },
    "off_2prim_ast": Object {
      "value": 0.4523809523809524,
    },
    "off_2primr": Object {
      "value": 0.19666666666666666,
    },
    "off_3p": Object {
      "value": 0.31736526946107785,
    },
    "off_3p_ast": Object {
      "value": 0.9245283018867925,
    },
    "off_3pr": Object {
      "value": 0.5566666666666666,
    },
    "off_adj_opp": Object {
      "value": 107.7926845637584,
    },
    "off_adj_prod": Object {
      "value": 0.5276274684769422,
    },
    "off_adj_prod_rank": 2,
    "off_adj_rapm_prod_rank": 2,
    "off_adj_rapm_rank": 2,
    "off_adj_rtg": Object {
      "old_value": undefined,
      "override": undefined,
      "value": 0.7310755517188853,
    },
    "off_adj_rtg_rank": 2,
    "off_assist": Object {
      "value": 0.10185185185185185,
    },
    "off_ast_3p": Object {
      "value": 0.5,
    },
    "off_ast_mid": Object {
      "value": 0.09090909090909091,
    },
    "off_ast_rim": Object {
      "value": 0.4090909090909091,
    },
    "off_efg": Object {
      "value": 0.465,
    },
    "off_ft": Object {
      "value": 0.7166666666666667,
    },
    "off_ftr": Object {
      "value": 0.2,
    },
    "off_orb": Object {
      "value": 0.043532338308457715,
    },
    "off_poss": Object {
      "value": 312.7630952380952,
    },
    "off_rtg": Object {
      "old_value": undefined,
      "override": undefined,
      "value": 99.19560099143102,
    },
    "off_scramble_2p": Object {
      "value": 0.5294117647058824,
    },
    "off_scramble_2p_ast": Object {
      "value": 0,
    },
    "off_scramble_2pmid": Object {
      "value": 0.2,
    },
    "off_scramble_2pmid_ast": Object {
      "value": 1,
    },
    "off_scramble_2pmidr": Object {
      "value": 0.19230769230769232,
    },
    "off_scramble_2prim": Object {
      "value": 0.6666666666666666,
    },
    "off_scramble_2prim_ast": Object {
      "value": 0.25,
    },
    "off_scramble_2primr": Object {
      "value": 0.46153846153846156,
    },
    "off_scramble_3p": Object {
      "value": 0.2222222222222222,
    },
    "off_scramble_3p_ast": Object {
      "value": 1,
    },
    "off_scramble_3pr": Object {
      "value": 0.34615384615384615,
    },
    "off_scramble_assist": Object {
      "value": 0.09090909090909091,
    },
    "off_scramble_efg": Object {
      "value": 0.46153846153846156,
    },
    "off_scramble_ft": Object {
      "value": 0.6,
    },
    "off_scramble_ftr": Object {
      "value": 0.19230769230769232,
    },
    "off_team_poss": Object {
      "value": 1499,
    },
    "off_team_poss_pct": Object {
      "value": 0.7217140105922003,
    },
    "off_to": Object {
      "value": 0.15986540855127684,
    },
    "off_trans_2p": Object {
      "value": 0.6538461538461539,
    },
    "off_trans_2p_ast": Object {
      "value": 0,
    },
    "off_trans_2pmid": Object {
      "value": 0.5,
    },
    "off_trans_2pmid_ast": Object {
      "value": 0.25,
    },
    "off_trans_2pmidr": Object {
      "value": 0.1095890410958904,
    },
    "off_trans_2prim": Object {
      "value": 0.7222222222222222,
    },
    "off_trans_2prim_ast": Object {
      "value": 0.6153846153846154,
    },
    "off_trans_2primr": Object {
      "value": 0.2465753424657534,
    },
    "off_trans_3p": Object {
      "value": 0.2765957446808511,
    },
    "off_trans_3p_ast": Object {
      "value": 0.9230769230769231,
    },
    "off_trans_3pr": Object {
      "value": 0.6438356164383562,
    },
    "off_trans_assist": Object {
      "value": 0.36666666666666664,
    },
    "off_trans_efg": Object {
      "value": 0.5,
    },
    "off_trans_ft": Object {
      "value": 0.7916666666666666,
    },
    "off_trans_ftr": Object {
      "value": 0.3287671232876712,
    },
    "off_usage": Object {
      "value": 0.20864782871120427,
    },
    "posClass": "WG",
    "posConfidences": Array [
      0.01370144662544993,
      0.37250889267731135,
      0.421320486517115,
      0.1924648271808755,
      0.000004346999248142039,
    ],
    "team": "Maryland",
    "year": "2020/21",
  },
]
`;

exports[`buildLeaderboards buildLeaderboards - main / completeLineupLeaderboard / completePlayerLeaderboard 2`] = `
Array [
  Object {
    "adj_prod_margin_rank": 1,
    "adj_rapm_margin_rank": 1,
    "adj_rapm_prod_margin_rank": 1,
    "adj_rtg_margin_rank": 1,
    "code": "AnCowan",
    "conf": "Big Ten Conference",
    "def_2prim": Object {
      "value": 0.005065856129685917,
    },
    "def_adj_opp": Object {
      "value": 96.60184357541898,
    },
    "def_adj_prod": Object {
      "old_value": -1.4896988746032713,
      "override": "Luck adjusted",
      "value": -1.4031925037071773,
    },
    "def_adj_prod_rank": 1,
    "def_adj_rapm_prod_rank": 1,
    "def_adj_rapm_rank": 1,
    "def_adj_rtg": Object {
      "old_value": -1.7318789709773228,
      "override": "Luck adjusted",
      "value": -1.6313092738629251,
    },
    "def_adj_rtg_rank": 1,
    "def_ftr": Object {
      "value": 0.024636871508379884,
    },
    "def_orb": Object {
      "value": 0.096,
    },
    "def_rtg": Object {
      "old_value": 98.84955759282161,
      "override": "Luck adjusted",
      "value": 99.38322763133561,
    },
    "def_team_poss": Object {
      "value": 1790,
    },
    "def_team_poss_pct": Object {
      "value": 0.8601633829889476,
    },
    "def_to": Object {
      "value": 0.01675977653631285,
    },
    "doc_count": 486,
    "duration_mins": Object {
      "value": 900,
    },
    "key": "Cowan, Anthony",
    "off_2p": Object {
      "value": 0.45604395604395603,
    },
    "off_2p_ast": Object {
      "value": 0,
    },
    "off_2pmid": Object {
      "value": 0.27692307692307694,
    },
    "off_2pmid_ast": Object {
      "value": 0,
    },
    "off_2pmidr": Object {
      "value": 0.18258426966292135,
    },
    "off_2prim": Object {
      "value": 0.5555555555555556,
    },
    "off_2prim_ast": Object {
      "value": 0.26153846153846155,
    },
    "off_2primr": Object {
      "value": 0.32865168539325845,
    },
    "off_3p": Object {
      "value": 0.3218390804597701,
    },
    "off_3p_ast": Object {
      "value": 0.625,
    },
    "off_3pr": Object {
      "value": 0.4887640449438202,
    },
    "off_adj_opp": Object {
      "value": 108.03972067039106,
    },
    "off_adj_prod": Object {
      "value": 5.0070555249708235,
    },
    "off_adj_prod_rank": 1,
    "off_adj_rapm_prod_rank": 1,
    "off_adj_rapm_rank": 1,
    "off_adj_rtg": Object {
      "old_value": undefined,
      "override": undefined,
      "value": 5.771173321511876,
    },
    "off_adj_rtg_rank": 1,
    "off_assist": Object {
      "value": 0.2916666666666667,
    },
    "off_ast_3p": Object {
      "value": 0.47619047619047616,
    },
    "off_ast_mid": Object {
      "value": 0.06802721088435375,
    },
    "off_ast_rim": Object {
      "value": 0.4557823129251701,
    },
    "off_efg": Object {
      "value": 0.4691011235955056,
    },
    "off_ft": Object {
      "value": 0.8113207547169812,
    },
    "off_ftr": Object {
      "value": 0.5955056179775281,
    },
    "off_orb": Object {
      "value": 0.017276422764227643,
    },
    "off_poss": Object {
      "value": 451.4845238095238,
    },
    "off_rtg": Object {
      "old_value": undefined,
      "override": undefined,
      "value": 116.5274146893099,
    },
    "off_scramble_2p": Object {
      "value": 0.5555555555555556,
    },
    "off_scramble_2p_ast": Object {
      "value": 0,
    },
    "off_scramble_2pmid": Object {
      "value": 0.25,
    },
    "off_scramble_2pmid_ast": Object {
      "value": 0,
    },
    "off_scramble_2pmidr": Object {
      "value": 0.18181818181818182,
    },
    "off_scramble_2prim": Object {
      "value": 0.8,
    },
    "off_scramble_2prim_ast": Object {
      "value": 0,
    },
    "off_scramble_2primr": Object {
      "value": 0.22727272727272727,
    },
    "off_scramble_3p": Object {
      "value": 0.46153846153846156,
    },
    "off_scramble_3p_ast": Object {
      "value": 0.8333333333333334,
    },
    "off_scramble_3pr": Object {
      "value": 0.5909090909090909,
    },
    "off_scramble_assist": Object {
      "value": 0.9090909090909091,
    },
    "off_scramble_efg": Object {
      "value": 0.6363636363636364,
    },
    "off_scramble_ft": Object {
      "value": 0.9166666666666666,
    },
    "off_scramble_ftr": Object {
      "value": 0.5454545454545454,
    },
    "off_team_poss": Object {
      "value": 1802,
    },
    "off_team_poss_pct": Object {
      "value": 0.8675974963890226,
    },
    "off_to": Object {
      "value": 0.1528291588331615,
    },
    "off_trans_2p": Object {
      "value": 0.5625,
    },
    "off_trans_2p_ast": Object {
      "value": 0,
    },
    "off_trans_2pmid": Object {
      "value": 0.5,
    },
    "off_trans_2pmid_ast": Object {
      "value": 0,
    },
    "off_trans_2pmidr": Object {
      "value": 0.03636363636363636,
    },
    "off_trans_2prim": Object {
      "value": 0.5666666666666667,
    },
    "off_trans_2prim_ast": Object {
      "value": 0.29411764705882354,
    },
    "off_trans_2primr": Object {
      "value": 0.5454545454545454,
    },
    "off_trans_3p": Object {
      "value": 0.34782608695652173,
    },
    "off_trans_3p_ast": Object {
      "value": 0.625,
    },
    "off_trans_3pr": Object {
      "value": 0.41818181818181815,
    },
    "off_trans_assist": Object {
      "value": 1.4615384615384615,
    },
    "off_trans_efg": Object {
      "value": 0.5454545454545454,
    },
    "off_trans_ft": Object {
      "value": 0.8235294117647058,
    },
    "off_trans_ftr": Object {
      "value": 1.5454545454545454,
    },
    "off_usage": Object {
      "value": 0.250546350615718,
    },
    "posClass": "s-PG",
    "posConfidences": Array [
      0.7573493221063862,
      0.23785653498514026,
      0.004535396666879756,
      0.00025873437114051626,
      1.1870453146996361e-8,
    ],
    "team": "Maryland",
    "year": "2020/21",
  },
]
`;

exports[`buildLeaderboards buildLeaderboards - main / completeLineupLeaderboard / completePlayerLeaderboard 3`] = `
Array [
  Object {
    "adj_margin_rank": 1,
    "conf": "Big Ten Conference",
    "def_2p": Object {
      "value": 0.425,
    },
    "def_2p_ast": Object {
      "value": 0,
    },
    "def_2pmid": Object {
      "value": 0.3125,
    },
    "def_2pmid_ast": Object {
      "value": 0.35,
    },
    "def_2pmidr": Object {
      "value": 0.3516483516483517,
    },
    "def_2prim": Object {
      "value": 0.5535714285714286,
    },
    "def_2prim_ast": Object {
      "value": 0.3548387096774194,
    },
    "def_2primr": Object {
      "value": 0.3076923076923077,
    },
    "def_3p": Object {
      "old_value": 0.27419354838709675,
      "override": "Luck adjusted",
      "value": 0.3303095221470543,
    },
    "def_3p_ast": Object {
      "value": 0.9411764705882353,
    },
    "def_3p_opp": Object {
      "value": 33.36290322580645,
    },
    "def_3pr": Object {
      "value": 0.34065934065934067,
    },
    "def_adj_opp": Object {
      "value": 94.87867298578198,
    },
    "def_adj_ppp": Object {
      "old_value": 79.356108708242,
      "override": "Adjusted from Def 3P%",
      "value": 83.49169594548212,
    },
    "def_adj_ppp_rank": 1,
    "def_assist": Object {
      "value": 0.5,
    },
    "def_ast_3p": Object {
      "value": 0.47058823529411764,
    },
    "def_ast_mid": Object {
      "value": 0.20588235294117646,
    },
    "def_ast_rim": Object {
      "value": 0.3235294117647059,
    },
    "def_efg": Object {
      "old_value": 0.42032967032967034,
      "override": "Adjusted from Def 3P%",
      "value": 0.4490043162619563,
    },
    "def_ft": Object {
      "value": 0.6341463414634146,
    },
    "def_ftr": Object {
      "value": 0.22527472527472528,
    },
    "def_luck_diags": Object {
      "adjDef3P": 0.3303095221470543,
      "avg3PSosAdj": -0.0033195101110102525,
      "avgEff": 101.8,
      "base3PSosAdj": -0.0015908882521489841,
      "baseDef3P": 0.32521489971346706,
      "baseDef3PSos": 0.3298939828080229,
      "basePoss": 2081,
      "delta3P": 0.05611597375995753,
      "deltaDefAdjEff": 4.1355872372401095,
      "deltaDefEfg": 0.02867464593228599,
      "deltaDefOrbFactor": -0.005102628108252599,
      "deltaDefPpp": 4.44645147614995,
      "deltaDefPppNoOrb": 4.900268131151221,
      "deltaMissesPct": -0.019116430621523992,
      "deltaPtsOffMisses": -0.45381665500127083,
      "luckPct": 0.66,
      "sample3PSosAdj": -0.020208064516129033,
      "sampleDef3P": 0.27419354838709675,
      "sampleDef3PRate": 0.34065934065934067,
      "sampleDef3PSos": 0.3336290322580645,
      "sampleDefEfg": 0.42032967032967034,
      "sampleDefFGA": 182,
      "sampleDefOrb": 0.2682926829268293,
      "sampleDefPpp": 84.03755868544602,
      "sampleOffSos": 109.45211267605633,
      "samplePoss": 213,
    },
    "def_orb": Object {
      "value": 0.2682926829268293,
    },
    "def_poss": Object {
      "value": 213,
    },
    "def_ppp": Object {
      "old_value": 84.03755868544602,
      "override": "Adjusted from Def 3P%",
      "value": 88.48401016159596,
    },
    "def_scramble_2p": Object {
      "value": 0.6666666666666666,
    },
    "def_scramble_2p_ast": Object {
      "value": 0,
    },
    "def_scramble_2pmid": Object {
      "value": 0.5,
    },
    "def_scramble_2pmid_ast": Object {
      "value": 1,
    },
    "def_scramble_2pmidr": Object {
      "value": 0.1111111111111111,
    },
    "def_scramble_2prim": Object {
      "value": 0.7,
    },
    "def_scramble_2prim_ast": Object {
      "value": 0,
    },
    "def_scramble_2primr": Object {
      "value": 0.5555555555555556,
    },
    "def_scramble_3p": Object {
      "value": 0.5,
    },
    "def_scramble_3p_ast": Object {
      "value": 1,
    },
    "def_scramble_3pr": Object {
      "value": 0.3333333333333333,
    },
    "def_scramble_assist": Object {
      "value": 0.36363636363636365,
    },
    "def_scramble_efg": Object {
      "value": 0.6944444444444444,
    },
    "def_scramble_ft": Object {
      "value": 1,
    },
    "def_scramble_ftr": Object {
      "value": 0.16666666666666666,
    },
    "def_scramble_ppp": Object {
      "value": 159.57188032108976,
    },
    "def_scramble_to": Object {
      "value": 0,
    },
    "def_to": Object {
      "value": 0.22065727699530516,
    },
    "def_trans_2p": Object {
      "value": 0.16666666666666666,
    },
    "def_trans_2p_ast": Object {
      "value": 0,
    },
    "def_trans_2pmid": Object {
      "value": 0,
    },
    "def_trans_2pmid_ast": Object {
      "value": 0,
    },
    "def_trans_2pmidr": Object {
      "value": 0,
    },
    "def_trans_2prim": Object {
      "value": 0.16666666666666666,
    },
    "def_trans_2prim_ast": Object {
      "value": 0,
    },
    "def_trans_2primr": Object {
      "value": 0.4,
    },
    "def_trans_3p": Object {
      "value": 0.2222222222222222,
    },
    "def_trans_3p_ast": Object {
      "value": 1,
    },
    "def_trans_3pr": Object {
      "value": 0.6,
    },
    "def_trans_assist": Object {
      "value": 0.6666666666666666,
    },
    "def_trans_efg": Object {
      "value": 0.26666666666666666,
    },
    "def_trans_ft": Object {
      "value": 0.6666666666666666,
    },
    "def_trans_ftr": Object {
      "value": 0.6,
    },
    "def_trans_ppp": Object {
      "value": 58.19877823122354,
    },
    "def_trans_to": Object {
      "value": 0.3325644470355631,
    },
    "doc_count": 50,
    "duration_mins": Object {
      "value": 131.06833333333333,
    },
    "key": "AaWiggins_AnCowan_DaMorsell_DoScott_JaSmith",
    "off_2p": Object {
      "value": 0.4803921568627451,
    },
    "off_2p_ast": Object {
      "value": 0,
    },
    "off_2pmid": Object {
      "value": 0.16666666666666666,
    },
    "off_2pmid_ast": Object {
      "value": 0,
    },
    "off_2pmidr": Object {
      "value": 0.20689655172413793,
    },
    "off_2prim": Object {
      "value": 0.6515151515151515,
    },
    "off_2prim_ast": Object {
      "value": 0.4186046511627907,
    },
    "off_2primr": Object {
      "value": 0.3793103448275862,
    },
    "off_3p": Object {
      "old_value": 0.3055555555555556,
      "override": "Luck adjusted",
      "value": 0.3184358324836993,
    },
    "off_3p_ast": Object {
      "value": 0.9545454545454546,
    },
    "off_3pr": Object {
      "value": 0.41379310344827586,
    },
    "off_adj_opp": Object {
      "value": 109.45211267605633,
    },
    "off_adj_ppp": Object {
      "old_value": 116.18465333545907,
      "override": "Adjusted from Off 3P%",
      "value": 117.40195102542215,
    },
    "off_adj_ppp_rank": 3,
    "off_assist": Object {
      "value": 0.5492957746478874,
    },
    "off_ast_3p": Object {
      "value": 0.5384615384615384,
    },
    "off_ast_mid": Object {
      "value": 0,
    },
    "off_ast_rim": Object {
      "value": 0.46153846153846156,
    },
    "off_efg": Object {
      "old_value": 0.47126436781609193,
      "override": "Adjusted from Off 3P%",
      "value": 0.47925902246114666,
    },
    "off_ft": Object {
      "value": 0.7126436781609196,
    },
    "off_ftr": Object {
      "value": 0.5,
    },
    "off_luck_diags": Object {
      "avgEff": 101.8,
      "base3PA": 765,
      "delta3P": 0.012880276928143697,
      "deltaMissesPct": -0.0053297697633698056,
      "deltaOffAdjEff": 1.2172976899630699,
      "deltaOffEfg": 0.007994654645054708,
      "deltaOffOrbFactor": -0.0016971276307072938,
      "deltaOffPpp": 1.1345342775280345,
      "deltaOffPppNoOrb": 1.3185496760564164,
      "deltaPtsOffMisses": -0.18401539852838195,
      "player3PInfo": Object {
        "Cowan, Anthony": Object {
          "base3P": 0.3218390804597701,
          "sample3PA": 174,
        },
        "Wiggins, Aaron": Object {
          "base3P": 0.31736526946107785,
          "sample3PA": 167,
        },
      },
      "regress3P": 0.3184358324836993,
      "sample3P": 0.3055555555555556,
      "sample3PA": 72,
      "sampleBase3P": 0.3196480938416422,
      "sampleDefSos": 94.87867298578198,
      "sampleOff3PRate": 0.41379310344827586,
      "sampleOffEfg": 0.47126436781609193,
      "sampleOffFGA": 174,
      "sampleOffOrb": 0.31896551724137934,
      "sampleOffPpp": 107.1090047393365,
      "samplePoss": 211,
    },
    "off_net": Object {
      "old_value": 36.82854462721707,
      "override": "Adjusted from Off 3P% and Def 3P%",
      "value": 33.91025507994003,
    },
    "off_orb": Object {
      "value": 0.31896551724137934,
    },
    "off_poss": Object {
      "value": 211,
    },
    "off_ppp": Object {
      "old_value": 107.1090047393365,
      "override": "Adjusted from Off 3P%",
      "value": 108.24353901686453,
    },
    "off_raw_net": Object {
      "old_value": 23.071446053890483,
      "override": "Adjusted from Off 3P% and Def 3P%",
      "value": 19.759528855268567,
    },
    "off_scramble_2p": Object {
      "value": 0.75,
    },
    "off_scramble_2p_ast": Object {
      "value": 0,
    },
    "off_scramble_2pmid": Object {
      "value": 0,
    },
    "off_scramble_2pmid_ast": Object {
      "value": 0,
    },
    "off_scramble_2pmidr": Object {
      "value": 0.06666666666666667,
    },
    "off_scramble_2prim": Object {
      "value": 0.8181818181818182,
    },
    "off_scramble_2prim_ast": Object {
      "value": 0.1111111111111111,
    },
    "off_scramble_2primr": Object {
      "value": 0.7333333333333333,
    },
    "off_scramble_3p": Object {
      "value": 0.3333333333333333,
    },
    "off_scramble_3p_ast": Object {
      "value": 1,
    },
    "off_scramble_3pr": Object {
      "value": 0.2,
    },
    "off_scramble_assist": Object {
      "value": 0.2,
    },
    "off_scramble_efg": Object {
      "value": 0.7,
    },
    "off_scramble_ft": Object {
      "value": 0.6666666666666666,
    },
    "off_scramble_ftr": Object {
      "value": 1.2,
    },
    "off_scramble_ppp": Object {
      "value": 137.75730531164533,
    },
    "off_scramble_to": Object {
      "value": 0.08348927594645171,
    },
    "off_to": Object {
      "value": 0.15639810426540285,
    },
    "off_trans_2p": Object {
      "value": 0.6875,
    },
    "off_trans_2p_ast": Object {
      "value": 0,
    },
    "off_trans_2pmid": Object {
      "value": 0.5,
    },
    "off_trans_2pmid_ast": Object {
      "value": 0,
    },
    "off_trans_2pmidr": Object {
      "value": 0.06451612903225806,
    },
    "off_trans_2prim": Object {
      "value": 0.7142857142857143,
    },
    "off_trans_2prim_ast": Object {
      "value": 0.7,
    },
    "off_trans_2primr": Object {
      "value": 0.45161290322580644,
    },
    "off_trans_3p": Object {
      "value": 0.4,
    },
    "off_trans_3p_ast": Object {
      "value": 1,
    },
    "off_trans_3pr": Object {
      "value": 0.4838709677419355,
    },
    "off_trans_assist": Object {
      "value": 0.7647058823529411,
    },
    "off_trans_efg": Object {
      "value": 0.6451612903225806,
    },
    "off_trans_ft": Object {
      "value": 0.8387096774193549,
    },
    "off_trans_ftr": Object {
      "value": 1,
    },
    "off_trans_ppp": Object {
      "value": 121.63772421791836,
    },
    "off_trans_to": Object {
      "value": 0.2395894567928695,
    },
    "player_info": Object {
      "Cowan, Anthony": Object {
        "code": "AnCowan",
        "def_adj_rtg": Object {
          "old_value": -1.7318789709773228,
          "override": "Luck adjusted",
          "value": -1.6313092738629251,
        },
        "def_orb": Object {
          "value": 0.096,
        },
        "key": "Cowan, Anthony",
        "off_3pr": Object {
          "value": 0.4887640449438202,
        },
        "off_adj_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 5.771173321511876,
        },
        "off_assist": Object {
          "value": 0.2916666666666667,
        },
        "off_ftr": Object {
          "value": 0.5955056179775281,
        },
        "off_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 116.5274146893099,
        },
        "off_usage": Object {
          "value": 0.250546350615718,
        },
        "posClass": "s-PG",
        "posConfidences": Array [
          0.7573493221063862,
          0.23785653498514026,
          0.004535396666879756,
          0.00025873437114051626,
          1.1870453146996361e-8,
        ],
      },
      "Morsell, Darryl": Object {
        "code": "DaMorsell",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Scott, Donta": Object {
        "code": "DoScott",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Smith, Jalen": Object {
        "code": "JaSmith",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Wiggins, Aaron": Object {
        "code": "AaWiggins",
        "def_adj_rtg": Object {
          "old_value": -3.0041172564964342,
          "override": "Luck adjusted",
          "value": -2.69043699172679,
        },
        "def_orb": Object {
          "value": 0.1380952380952381,
        },
        "key": "Wiggins, Aaron",
        "off_3pr": Object {
          "value": 0.5566666666666666,
        },
        "off_adj_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 0.7310755517188853,
        },
        "off_assist": Object {
          "value": 0.10185185185185185,
        },
        "off_ftr": Object {
          "value": 0.2,
        },
        "off_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 99.19560099143102,
        },
        "off_usage": Object {
          "value": 0.20864782871120427,
        },
        "posClass": "WG",
        "posConfidences": Array [
          0.01370144662544993,
          0.37250889267731135,
          0.421320486517115,
          0.1924648271808755,
          0.000004346999248142039,
        ],
      },
    },
    "team": "Maryland",
    "total_def_poss": Object {
      "value": 213,
    },
    "total_def_scramble_poss": Object {
      "value": 17.546951219512195,
    },
    "total_def_trans_poss": Object {
      "value": 24.055487804878048,
    },
    "total_off_poss": Object {
      "value": 211,
    },
    "total_off_scramble_poss": Object {
      "value": 23.9551724137931,
    },
    "total_off_trans_poss": Object {
      "value": 54.25948275862069,
    },
    "year": "2020/21",
  },
  Object {
    "adj_margin_rank": 2,
    "conf": "Big Ten Conference",
    "def_2p": Object {
      "value": 0.4264705882352941,
    },
    "def_2p_ast": Object {
      "value": 0,
    },
    "def_2pmid": Object {
      "value": 0.3069306930693069,
    },
    "def_2pmid_ast": Object {
      "value": 0.22580645161290322,
    },
    "def_2pmidr": Object {
      "value": 0.2997032640949555,
    },
    "def_2prim": Object {
      "value": 0.5436893203883495,
    },
    "def_2prim_ast": Object {
      "value": 0.44642857142857145,
    },
    "def_2primr": Object {
      "value": 0.3056379821958457,
    },
    "def_3p": Object {
      "old_value": 0.3007518796992481,
      "override": "Luck adjusted",
      "value": 0.33266903566872214,
    },
    "def_3p_ast": Object {
      "value": 0.875,
    },
    "def_3p_opp": Object {
      "value": 33.58872180451128,
    },
    "def_3pr": Object {
      "value": 0.39465875370919884,
    },
    "def_adj_opp": Object {
      "value": 97.46209476309228,
    },
    "def_adj_ppp": Object {
      "old_value": 87.8676478552093,
      "override": "Adjusted from Def 3P%",
      "value": 90.693232676278,
    },
    "def_adj_ppp_rank": 3,
    "def_assist": Object {
      "value": 0.5275590551181102,
    },
    "def_ast_3p": Object {
      "value": 0.5223880597014925,
    },
    "def_ast_mid": Object {
      "value": 0.1044776119402985,
    },
    "def_ast_rim": Object {
      "value": 0.373134328358209,
    },
    "def_efg": Object {
      "old_value": 0.4362017804154303,
      "override": "Adjusted from Def 3P%",
      "value": 0.4550963579107124,
    },
    "def_ft": Object {
      "value": 0.7472527472527473,
    },
    "def_ftr": Object {
      "value": 0.27002967359050445,
    },
    "def_luck_diags": Object {
      "adjDef3P": 0.33266903566872214,
      "avg3PSosAdj": -0.003218182376390646,
      "avgEff": 101.8,
      "base3PSosAdj": -0.0015908882521489841,
      "baseDef3P": 0.32521489971346706,
      "baseDef3PSos": 0.3298939828080229,
      "basePoss": 2081,
      "delta3P": 0.03191715596947403,
      "deltaDefAdjEff": 2.8255848210687087,
      "deltaDefEfg": 0.018894577495282106,
      "deltaDefOrbFactor": -0.002847051752358573,
      "deltaDefPpp": 3.0072307859092504,
      "deltaDefPppNoOrb": 3.282202379335087,
      "deltaMissesPct": -0.012596384996854738,
      "deltaPtsOffMisses": -0.274971593425837,
      "luckPct": 0.66,
      "sample3PSosAdj": -0.011946015037593993,
      "sampleDef3P": 0.3007518796992481,
      "sampleDef3PRate": 0.39465875370919884,
      "sampleDef3PSos": 0.3358872180451128,
      "sampleDefEfg": 0.4362017804154303,
      "sampleDefFGA": 337,
      "sampleDefOrb": 0.22666666666666666,
      "sampleDefPpp": 93.29896907216495,
      "sampleOffSos": 108.34432989690721,
      "samplePoss": 388,
    },
    "def_orb": Object {
      "value": 0.22666666666666666,
    },
    "def_poss": Object {
      "value": 388,
    },
    "def_ppp": Object {
      "old_value": 93.29896907216495,
      "override": "Adjusted from Def 3P%",
      "value": 96.3061998580742,
    },
    "def_scramble_2p": Object {
      "value": 0.35294117647058826,
    },
    "def_scramble_2p_ast": Object {
      "value": 0,
    },
    "def_scramble_2pmid": Object {
      "value": 0,
    },
    "def_scramble_2pmid_ast": Object {
      "value": 0,
    },
    "def_scramble_2pmidr": Object {
      "value": 0.20833333333333334,
    },
    "def_scramble_2prim": Object {
      "value": 0.5,
    },
    "def_scramble_2prim_ast": Object {
      "value": 0,
    },
    "def_scramble_2primr": Object {
      "value": 0.5,
    },
    "def_scramble_3p": Object {
      "value": 0.42857142857142855,
    },
    "def_scramble_3p_ast": Object {
      "value": 1,
    },
    "def_scramble_3pr": Object {
      "value": 0.2916666666666667,
    },
    "def_scramble_assist": Object {
      "value": 0.3333333333333333,
    },
    "def_scramble_efg": Object {
      "value": 0.4375,
    },
    "def_scramble_ft": Object {
      "value": 0.6666666666666666,
    },
    "def_scramble_ftr": Object {
      "value": 0.75,
    },
    "def_scramble_ppp": Object {
      "value": 102.6438569206843,
    },
    "def_scramble_to": Object {
      "value": 0.09331259720062209,
    },
    "def_to": Object {
      "value": 0.15206185567010308,
    },
    "def_trans_2p": Object {
      "value": 0.4634146341463415,
    },
    "def_trans_2p_ast": Object {
      "value": 0,
    },
    "def_trans_2pmid": Object {
      "value": 0.2727272727272727,
    },
    "def_trans_2pmid_ast": Object {
      "value": 0,
    },
    "def_trans_2pmidr": Object {
      "value": 0.15942028985507245,
    },
    "def_trans_2prim": Object {
      "value": 0.5333333333333333,
    },
    "def_trans_2prim_ast": Object {
      "value": 0.4375,
    },
    "def_trans_2primr": Object {
      "value": 0.43478260869565216,
    },
    "def_trans_3p": Object {
      "value": 0.2857142857142857,
    },
    "def_trans_3p_ast": Object {
      "value": 0.875,
    },
    "def_trans_3pr": Object {
      "value": 0.4057971014492754,
    },
    "def_trans_assist": Object {
      "value": 0.5185185185185185,
    },
    "def_trans_efg": Object {
      "value": 0.4492753623188406,
    },
    "def_trans_ft": Object {
      "value": 0.75,
    },
    "def_trans_ftr": Object {
      "value": 0.34782608695652173,
    },
    "def_trans_ppp": Object {
      "value": 100.15022533800702,
    },
    "def_trans_to": Object {
      "value": 0.1126690035052579,
    },
    "doc_count": 72,
    "duration_mins": Object {
      "value": 220.22333333333333,
    },
    "key": "AaWiggins_AnCowan_DaMorsell_ErAyala_JaSmith",
    "off_2p": Object {
      "value": 0.5511363636363636,
    },
    "off_2p_ast": Object {
      "value": 0,
    },
    "off_2pmid": Object {
      "value": 0.2413793103448276,
    },
    "off_2pmid_ast": Object {
      "value": 0.21428571428571427,
    },
    "off_2pmidr": Object {
      "value": 0.17956656346749225,
    },
    "off_2prim": Object {
      "value": 0.7033898305084746,
    },
    "off_2prim_ast": Object {
      "value": 0.43373493975903615,
    },
    "off_2primr": Object {
      "value": 0.3653250773993808,
    },
    "off_3p": Object {
      "old_value": 0.30612244897959184,
      "override": "Luck adjusted",
      "value": 0.3174679734526933,
    },
    "off_3p_ast": Object {
      "value": 0.7777777777777778,
    },
    "off_3pr": Object {
      "value": 0.4551083591331269,
    },
    "off_adj_opp": Object {
      "value": 108.34432989690721,
    },
    "off_adj_ppp": Object {
      "old_value": 123.30858896547036,
      "override": "Adjusted from Off 3P%",
      "value": 124.4295865332912,
    },
    "off_adj_ppp_rank": 1,
    "off_assist": Object {
      "value": 0.5211267605633803,
    },
    "off_ast_3p": Object {
      "value": 0.47297297297297297,
    },
    "off_ast_mid": Object {
      "value": 0.04054054054054054,
    },
    "off_ast_rim": Object {
      "value": 0.4864864864864865,
    },
    "off_efg": Object {
      "old_value": 0.5092879256965944,
      "override": "Adjusted from Off 3P%",
      "value": 0.5170330902362813,
    },
    "off_ft": Object {
      "value": 0.7663043478260869,
    },
    "off_ftr": Object {
      "value": 0.5696594427244582,
    },
    "off_luck_diags": Object {
      "avgEff": 101.8,
      "base3PA": 765,
      "delta3P": 0.011345524473101443,
      "deltaMissesPct": -0.0051634430264579315,
      "deltaOffAdjEff": 1.1209975678208317,
      "deltaOffEfg": 0.007745164539686898,
      "deltaOffOrbFactor": -0.0014730962222976021,
      "deltaOffPpp": 1.0732295794120812,
      "deltaOffPppNoOrb": 1.2477247612562934,
      "deltaPtsOffMisses": -0.17449518184421223,
      "player3PInfo": Object {
        "Cowan, Anthony": Object {
          "base3P": 0.3218390804597701,
          "sample3PA": 174,
        },
        "Wiggins, Aaron": Object {
          "base3P": 0.31736526946107785,
          "sample3PA": 167,
        },
      },
      "regress3P": 0.3174679734526933,
      "sample3P": 0.30612244897959184,
      "sample3PA": 147,
      "sampleBase3P": 0.3196480938416422,
      "sampleDefSos": 97.46209476309228,
      "sampleOff3PRate": 0.4551083591331269,
      "sampleOffEfg": 0.5092879256965944,
      "sampleOffFGA": 323,
      "sampleOffOrb": 0.2857142857142857,
      "sampleOffPpp": 117.2069825436409,
      "samplePoss": 401,
    },
    "off_net": Object {
      "old_value": 35.440941110261065,
      "override": "Adjusted from Off 3P% and Def 3P%",
      "value": 33.736353857013185,
    },
    "off_orb": Object {
      "value": 0.2857142857142857,
    },
    "off_poss": Object {
      "value": 401,
    },
    "off_ppp": Object {
      "old_value": 117.2069825436409,
      "override": "Adjusted from Off 3P%",
      "value": 118.28021212305299,
    },
    "off_raw_net": Object {
      "old_value": 23.908013471475954,
      "override": "Adjusted from Off 3P% and Def 3P%",
      "value": 21.974012264978786,
    },
    "off_scramble_2p": Object {
      "value": 0.7,
    },
    "off_scramble_2p_ast": Object {
      "value": 0,
    },
    "off_scramble_2pmid": Object {
      "value": 0.3333333333333333,
    },
    "off_scramble_2pmid_ast": Object {
      "value": 1,
    },
    "off_scramble_2pmidr": Object {
      "value": 0.0967741935483871,
    },
    "off_scramble_2prim": Object {
      "value": 0.7647058823529411,
    },
    "off_scramble_2prim_ast": Object {
      "value": 0.07692307692307693,
    },
    "off_scramble_2primr": Object {
      "value": 0.5483870967741935,
    },
    "off_scramble_3p": Object {
      "value": 0.18181818181818182,
    },
    "off_scramble_3p_ast": Object {
      "value": 1,
    },
    "off_scramble_3pr": Object {
      "value": 0.3548387096774194,
    },
    "off_scramble_assist": Object {
      "value": 0.25,
    },
    "off_scramble_efg": Object {
      "value": 0.5483870967741935,
    },
    "off_scramble_ft": Object {
      "value": 0.875,
    },
    "off_scramble_ftr": Object {
      "value": 0.5161290322580645,
    },
    "off_scramble_ppp": Object {
      "value": 125.27964205816554,
    },
    "off_scramble_to": Object {
      "value": 0.10439970171513795,
    },
    "off_to": Object {
      "value": 0.12219451371571072,
    },
    "off_trans_2p": Object {
      "value": 0.7567567567567568,
    },
    "off_trans_2p_ast": Object {
      "value": 0,
    },
    "off_trans_2pmid": Object {
      "value": 0.3333333333333333,
    },
    "off_trans_2pmid_ast": Object {
      "value": 0,
    },
    "off_trans_2pmidr": Object {
      "value": 0.09523809523809523,
    },
    "off_trans_2prim": Object {
      "value": 0.8387096774193549,
    },
    "off_trans_2prim_ast": Object {
      "value": 0.5,
    },
    "off_trans_2primr": Object {
      "value": 0.49206349206349204,
    },
    "off_trans_3p": Object {
      "value": 0.2692307692307692,
    },
    "off_trans_3p_ast": Object {
      "value": 0.7142857142857143,
    },
    "off_trans_3pr": Object {
      "value": 0.4126984126984127,
    },
    "off_trans_assist": Object {
      "value": 0.5142857142857142,
    },
    "off_trans_efg": Object {
      "value": 0.6111111111111112,
    },
    "off_trans_ft": Object {
      "value": 0.7866666666666666,
    },
    "off_trans_ftr": Object {
      "value": 1.1904761904761905,
    },
    "off_trans_ppp": Object {
      "value": 133.82533825338254,
    },
    "off_trans_to": Object {
      "value": 0.10824108241082411,
    },
    "player_info": Object {
      "Ayala, Eric": Object {
        "code": "ErAyala",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Cowan, Anthony": Object {
        "code": "AnCowan",
        "def_adj_rtg": Object {
          "old_value": -1.7318789709773228,
          "override": "Luck adjusted",
          "value": -1.6313092738629251,
        },
        "def_orb": Object {
          "value": 0.096,
        },
        "key": "Cowan, Anthony",
        "off_3pr": Object {
          "value": 0.4887640449438202,
        },
        "off_adj_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 5.771173321511876,
        },
        "off_assist": Object {
          "value": 0.2916666666666667,
        },
        "off_ftr": Object {
          "value": 0.5955056179775281,
        },
        "off_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 116.5274146893099,
        },
        "off_usage": Object {
          "value": 0.250546350615718,
        },
        "posClass": "s-PG",
        "posConfidences": Array [
          0.7573493221063862,
          0.23785653498514026,
          0.004535396666879756,
          0.00025873437114051626,
          1.1870453146996361e-8,
        ],
      },
      "Morsell, Darryl": Object {
        "code": "DaMorsell",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Smith, Jalen": Object {
        "code": "JaSmith",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Wiggins, Aaron": Object {
        "code": "AaWiggins",
        "def_adj_rtg": Object {
          "old_value": -3.0041172564964342,
          "override": "Luck adjusted",
          "value": -2.69043699172679,
        },
        "def_orb": Object {
          "value": 0.1380952380952381,
        },
        "key": "Wiggins, Aaron",
        "off_3pr": Object {
          "value": 0.5566666666666666,
        },
        "off_adj_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 0.7310755517188853,
        },
        "off_assist": Object {
          "value": 0.10185185185185185,
        },
        "off_ftr": Object {
          "value": 0.2,
        },
        "off_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 99.19560099143102,
        },
        "off_usage": Object {
          "value": 0.20864782871120427,
        },
        "posClass": "WG",
        "posConfidences": Array [
          0.01370144662544993,
          0.37250889267731135,
          0.421320486517115,
          0.1924648271808755,
          0.000004346999248142039,
        ],
      },
    },
    "team": "Maryland",
    "total_def_poss": Object {
      "value": 388,
    },
    "total_def_scramble_poss": Object {
      "value": 32.15,
    },
    "total_def_trans_poss": Object {
      "value": 79.88,
    },
    "total_off_poss": Object {
      "value": 401,
    },
    "total_off_scramble_poss": Object {
      "value": 38.31428571428572,
    },
    "total_off_trans_poss": Object {
      "value": 101.625,
    },
    "year": "2020/21",
  },
  Object {
    "adj_margin_rank": 3,
    "conf": "Big Ten Conference",
    "def_2p": Object {
      "value": 0.3867924528301887,
    },
    "def_2p_ast": Object {
      "value": 0,
    },
    "def_2pmid": Object {
      "value": 0.20454545454545456,
    },
    "def_2pmid_ast": Object {
      "value": 0.4444444444444444,
    },
    "def_2pmidr": Object {
      "value": 0.24719101123595505,
    },
    "def_2prim": Object {
      "value": 0.5161290322580645,
    },
    "def_2prim_ast": Object {
      "value": 0.46875,
    },
    "def_2primr": Object {
      "value": 0.34831460674157305,
    },
    "def_3p": Object {
      "old_value": 0.25,
      "override": "Luck adjusted",
      "value": 0.3296211167998388,
    },
    "def_3p_ast": Object {
      "value": 0.8888888888888888,
    },
    "def_3p_opp": Object {
      "value": 33.34861111111111,
    },
    "def_3pr": Object {
      "value": 0.4044943820224719,
    },
    "def_adj_opp": Object {
      "value": 95.28071065989847,
    },
    "def_adj_ppp": Object {
      "old_value": 82.0894333612718,
      "override": "Adjusted from Def 3P%",
      "value": 89.53315121138908,
    },
    "def_adj_ppp_rank": 2,
    "def_assist": Object {
      "value": 0.5932203389830508,
    },
    "def_ast_3p": Object {
      "value": 0.45714285714285713,
    },
    "def_ast_mid": Object {
      "value": 0.11428571428571428,
    },
    "def_ast_rim": Object {
      "value": 0.42857142857142855,
    },
    "def_efg": Object {
      "old_value": 0.38202247191011235,
      "override": "Adjusted from Def 3P%",
      "value": 0.4303319135639471,
    },
    "def_ft": Object {
      "value": 0.5925925925925926,
    },
    "def_ftr": Object {
      "value": 0.30337078651685395,
    },
    "def_luck_diags": Object {
      "adjDef3P": 0.3296211167998388,
      "avg3PSosAdj": -0.0038649943112722715,
      "avgEff": 101.8,
      "base3PSosAdj": -0.0015908882521489841,
      "baseDef3P": 0.32521489971346706,
      "baseDef3PSos": 0.3298939828080229,
      "basePoss": 2081,
      "delta3P": 0.0796211167998388,
      "deltaDefAdjEff": 7.443717850117282,
      "deltaDefEfg": 0.04830944165383477,
      "deltaDefOrbFactor": -0.010210743849496903,
      "deltaDefPpp": 7.9311659290468555,
      "deltaDefPppNoOrb": 8.910964367235845,
      "deltaMissesPct": -0.03220629443588985,
      "deltaPtsOffMisses": -0.9797984381889896,
      "luckPct": 0.66,
      "sample3PSosAdj": -0.02838527777777777,
      "sampleDef3P": 0.25,
      "sampleDef3PRate": 0.4044943820224719,
      "sampleDef3PSos": 0.3334861111111111,
      "sampleDefEfg": 0.38202247191011235,
      "sampleDefFGA": 178,
      "sampleDefOrb": 0.3203125,
      "sampleDefPpp": 87.04663212435233,
      "sampleOffSos": 108.46632124352331,
      "samplePoss": 193,
    },
    "def_orb": Object {
      "value": 0.3203125,
    },
    "def_poss": Object {
      "value": 193,
    },
    "def_ppp": Object {
      "old_value": 87.04663212435233,
      "override": "Adjusted from Def 3P%",
      "value": 94.97779805339918,
    },
    "def_scramble_2p": Object {
      "value": 0.7777777777777778,
    },
    "def_scramble_2p_ast": Object {
      "value": 0,
    },
    "def_scramble_2pmid": Object {
      "value": 0.5,
    },
    "def_scramble_2pmid_ast": Object {
      "value": 1,
    },
    "def_scramble_2pmidr": Object {
      "value": 0.16666666666666666,
    },
    "def_scramble_2prim": Object {
      "value": 0.8571428571428571,
    },
    "def_scramble_2prim_ast": Object {
      "value": 0,
    },
    "def_scramble_2primr": Object {
      "value": 0.5833333333333334,
    },
    "def_scramble_3p": Object {
      "value": 0,
    },
    "def_scramble_3p_ast": Object {
      "value": 0,
    },
    "def_scramble_3pr": Object {
      "value": 0.25,
    },
    "def_scramble_assist": Object {
      "value": 0.14285714285714285,
    },
    "def_scramble_efg": Object {
      "value": 0.5833333333333334,
    },
    "def_scramble_ft": Object {
      "value": 0.16666666666666666,
    },
    "def_scramble_ftr": Object {
      "value": 0.5,
    },
    "def_scramble_ppp": Object {
      "value": 92.31656890085584,
    },
    "def_scramble_to": Object {
      "value": 0.1846331378017117,
    },
    "def_to": Object {
      "value": 0.17098445595854922,
    },
    "def_trans_2p": Object {
      "value": 0.4444444444444444,
    },
    "def_trans_2p_ast": Object {
      "value": 0,
    },
    "def_trans_2pmid": Object {
      "value": 0,
    },
    "def_trans_2pmid_ast": Object {
      "value": 0,
    },
    "def_trans_2pmidr": Object {
      "value": 0.06451612903225806,
    },
    "def_trans_2prim": Object {
      "value": 0.5,
    },
    "def_trans_2prim_ast": Object {
      "value": 0.75,
    },
    "def_trans_2primr": Object {
      "value": 0.5161290322580645,
    },
    "def_trans_3p": Object {
      "value": 0.3076923076923077,
    },
    "def_trans_3p_ast": Object {
      "value": 0.5,
    },
    "def_trans_3pr": Object {
      "value": 0.41935483870967744,
    },
    "def_trans_assist": Object {
      "value": 0.6666666666666666,
    },
    "def_trans_efg": Object {
      "value": 0.45161290322580644,
    },
    "def_trans_ft": Object {
      "value": 0.5,
    },
    "def_trans_ftr": Object {
      "value": 0.5161290322580645,
    },
    "def_trans_ppp": Object {
      "value": 95.9640134949394,
    },
    "def_trans_to": Object {
      "value": 0.1332833520763047,
    },
    "doc_count": 52,
    "duration_mins": Object {
      "value": 121.81833333333336,
    },
    "key": "AaWiggins_AnCowan_DoScott_ErAyala_JaSmith",
    "off_2p": Object {
      "value": 0.5353535353535354,
    },
    "off_2p_ast": Object {
      "value": 0,
    },
    "off_2pmid": Object {
      "value": 0.3235294117647059,
    },
    "off_2pmid_ast": Object {
      "value": 0.2727272727272727,
    },
    "off_2pmidr": Object {
      "value": 0.18681318681318682,
    },
    "off_2prim": Object {
      "value": 0.6461538461538462,
    },
    "off_2prim_ast": Object {
      "value": 0.38095238095238093,
    },
    "off_2primr": Object {
      "value": 0.35714285714285715,
    },
    "off_3p": Object {
      "old_value": 0.3373493975903614,
      "override": "Luck adjusted",
      "value": 0.32138065069440597,
    },
    "off_3p_ast": Object {
      "value": 0.8571428571428571,
    },
    "off_3pr": Object {
      "value": 0.45604395604395603,
    },
    "off_adj_opp": Object {
      "value": 108.46632124352331,
    },
    "off_adj_ppp": Object {
      "old_value": 120.3613605770025,
      "override": "Adjusted from Off 3P%",
      "value": 118.47534050959106,
    },
    "off_adj_ppp_rank": 2,
    "off_assist": Object {
      "value": 0.5308641975308642,
    },
    "off_ast_3p": Object {
      "value": 0.5581395348837209,
    },
    "off_ast_mid": Object {
      "value": 0.06976744186046512,
    },
    "off_ast_rim": Object {
      "value": 0.37209302325581395,
    },
    "off_efg": Object {
      "old_value": 0.521978021978022,
      "override": "Adjusted from Off 3P%",
      "value": 0.5110543462167778,
    },
    "off_ft": Object {
      "value": 0.7560975609756098,
    },
    "off_ftr": Object {
      "value": 0.22527472527472528,
    },
    "off_luck_diags": Object {
      "avgEff": 101.8,
      "base3PA": 765,
      "delta3P": -0.015968746895955455,
      "deltaMissesPct": 0.0072824505074961686,
      "deltaOffAdjEff": -1.8860200674114338,
      "deltaOffEfg": -0.010923675761244252,
      "deltaOffOrbFactor": 0.0022978915075447187,
      "deltaOffPpp": -1.7652390210392048,
      "deltaOffPppNoOrb": -2.0183847599456386,
      "deltaPtsOffMisses": 0.2531457389064337,
      "player3PInfo": Object {
        "Cowan, Anthony": Object {
          "base3P": 0.3218390804597701,
          "sample3PA": 174,
        },
        "Wiggins, Aaron": Object {
          "base3P": 0.31736526946107785,
          "sample3PA": 167,
        },
      },
      "regress3P": 0.32138065069440597,
      "sample3P": 0.3373493975903614,
      "sample3PA": 83,
      "sampleBase3P": 0.3196480938416422,
      "sampleDefSos": 95.28071065989847,
      "sampleOff3PRate": 0.45604395604395603,
      "sampleOffEfg": 0.521978021978022,
      "sampleOffFGA": 182,
      "sampleOffOrb": 0.3148148148148148,
      "sampleOffPpp": 112.18274111675127,
      "samplePoss": 197,
    },
    "off_net": Object {
      "old_value": 38.2719272157307,
      "override": "Adjusted from Off 3P% and Def 3P%",
      "value": 28.94218929820198,
    },
    "off_orb": Object {
      "value": 0.3148148148148148,
    },
    "off_poss": Object {
      "value": 197,
    },
    "off_ppp": Object {
      "old_value": 112.18274111675127,
      "override": "Adjusted from Off 3P%",
      "value": 110.41750209571207,
    },
    "off_raw_net": Object {
      "old_value": 25.136108992398945,
      "override": "Adjusted from Off 3P% and Def 3P%",
      "value": 15.439704042312885,
    },
    "off_scramble_2p": Object {
      "value": 0.5384615384615384,
    },
    "off_scramble_2p_ast": Object {
      "value": 0,
    },
    "off_scramble_2pmid": Object {
      "value": 0,
    },
    "off_scramble_2pmid_ast": Object {
      "value": 0,
    },
    "off_scramble_2pmidr": Object {
      "value": 0.13333333333333333,
    },
    "off_scramble_2prim": Object {
      "value": 0.6363636363636364,
    },
    "off_scramble_2prim_ast": Object {
      "value": 0,
    },
    "off_scramble_2primr": Object {
      "value": 0.7333333333333333,
    },
    "off_scramble_3p": Object {
      "value": 0,
    },
    "off_scramble_3p_ast": Object {
      "value": 0,
    },
    "off_scramble_3pr": Object {
      "value": 0.13333333333333333,
    },
    "off_scramble_assist": Object {
      "value": 0,
    },
    "off_scramble_efg": Object {
      "value": 0.4666666666666667,
    },
    "off_scramble_ft": Object {
      "value": 0.8,
    },
    "off_scramble_ftr": Object {
      "value": 0.3333333333333333,
    },
    "off_scramble_ppp": Object {
      "value": 90.6505012823502,
    },
    "off_scramble_to": Object {
      "value": 0.2518069480065283,
    },
    "off_to": Object {
      "value": 0.17258883248730963,
    },
    "off_trans_2p": Object {
      "value": 0.6666666666666666,
    },
    "off_trans_2p_ast": Object {
      "value": 0,
    },
    "off_trans_2pmid": Object {
      "value": 0.5,
    },
    "off_trans_2pmid_ast": Object {
      "value": 0,
    },
    "off_trans_2pmidr": Object {
      "value": 0.06060606060606061,
    },
    "off_trans_2prim": Object {
      "value": 0.6875,
    },
    "off_trans_2prim_ast": Object {
      "value": 0.36363636363636365,
    },
    "off_trans_2primr": Object {
      "value": 0.48484848484848486,
    },
    "off_trans_3p": Object {
      "value": 0.4,
    },
    "off_trans_3p_ast": Object {
      "value": 0.8333333333333334,
    },
    "off_trans_3pr": Object {
      "value": 0.45454545454545453,
    },
    "off_trans_assist": Object {
      "value": 0.5,
    },
    "off_trans_efg": Object {
      "value": 0.6363636363636364,
    },
    "off_trans_ft": Object {
      "value": 0.5,
    },
    "off_trans_ftr": Object {
      "value": 0.06060606060606061,
    },
    "off_trans_ppp": Object {
      "value": 118.69345192455145,
    },
    "off_trans_to": Object {
      "value": 0.19322189848182797,
    },
    "player_info": Object {
      "Ayala, Eric": Object {
        "code": "ErAyala",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Cowan, Anthony": Object {
        "code": "AnCowan",
        "def_adj_rtg": Object {
          "old_value": -1.7318789709773228,
          "override": "Luck adjusted",
          "value": -1.6313092738629251,
        },
        "def_orb": Object {
          "value": 0.096,
        },
        "key": "Cowan, Anthony",
        "off_3pr": Object {
          "value": 0.4887640449438202,
        },
        "off_adj_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 5.771173321511876,
        },
        "off_assist": Object {
          "value": 0.2916666666666667,
        },
        "off_ftr": Object {
          "value": 0.5955056179775281,
        },
        "off_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 116.5274146893099,
        },
        "off_usage": Object {
          "value": 0.250546350615718,
        },
        "posClass": "s-PG",
        "posConfidences": Array [
          0.7573493221063862,
          0.23785653498514026,
          0.004535396666879756,
          0.00025873437114051626,
          1.1870453146996361e-8,
        ],
      },
      "Scott, Donta": Object {
        "code": "DoScott",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Smith, Jalen": Object {
        "code": "JaSmith",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Wiggins, Aaron": Object {
        "code": "AaWiggins",
        "def_adj_rtg": Object {
          "old_value": -3.0041172564964342,
          "override": "Luck adjusted",
          "value": -2.69043699172679,
        },
        "def_orb": Object {
          "value": 0.1380952380952381,
        },
        "key": "Wiggins, Aaron",
        "off_3pr": Object {
          "value": 0.5566666666666666,
        },
        "off_adj_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 0.7310755517188853,
        },
        "off_assist": Object {
          "value": 0.10185185185185185,
        },
        "off_ftr": Object {
          "value": 0.2,
        },
        "off_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 99.19560099143102,
        },
        "off_usage": Object {
          "value": 0.20864782871120427,
        },
        "posClass": "WG",
        "posConfidences": Array [
          0.01370144662544993,
          0.37250889267731135,
          0.421320486517115,
          0.1924648271808755,
          0.000004346999248142039,
        ],
      },
    },
    "team": "Maryland",
    "total_def_poss": Object {
      "value": 193,
    },
    "total_def_scramble_poss": Object {
      "value": 16.2484375,
    },
    "total_def_trans_poss": Object {
      "value": 37.5140625,
    },
    "total_off_poss": Object {
      "value": 197,
    },
    "total_off_scramble_poss": Object {
      "value": 19.85648148148148,
    },
    "total_off_trans_poss": Object {
      "value": 36.227777777777774,
    },
    "year": "2020/21",
  },
]
`;

exports[`buildLeaderboards buildLeaderboards - main / completeLineupLeaderboard / completePlayerLeaderboard 4`] = `
Array [
  Object {
    "adj_margin_rank": 1,
    "conf": "Big Ten Conference",
    "def_2p": Object {
      "value": 0.4264705882352941,
    },
    "def_2p_ast": Object {
      "value": 0,
    },
    "def_2pmid": Object {
      "value": 0.3069306930693069,
    },
    "def_2pmid_ast": Object {
      "value": 0.22580645161290322,
    },
    "def_2pmidr": Object {
      "value": 0.2997032640949555,
    },
    "def_2prim": Object {
      "value": 0.5436893203883495,
    },
    "def_2prim_ast": Object {
      "value": 0.44642857142857145,
    },
    "def_2primr": Object {
      "value": 0.3056379821958457,
    },
    "def_3p": Object {
      "old_value": 0.3007518796992481,
      "override": "Luck adjusted",
      "value": 0.33266903566872214,
    },
    "def_3p_ast": Object {
      "value": 0.875,
    },
    "def_3p_opp": Object {
      "value": 33.58872180451128,
    },
    "def_3pr": Object {
      "value": 0.39465875370919884,
    },
    "def_adj_opp": Object {
      "value": 97.46209476309228,
    },
    "def_adj_ppp": Object {
      "old_value": 87.8676478552093,
      "override": "Adjusted from Def 3P%",
      "value": 90.693232676278,
    },
    "def_adj_ppp_rank": 1,
    "def_assist": Object {
      "value": 0.5275590551181102,
    },
    "def_ast_3p": Object {
      "value": 0.5223880597014925,
    },
    "def_ast_mid": Object {
      "value": 0.1044776119402985,
    },
    "def_ast_rim": Object {
      "value": 0.373134328358209,
    },
    "def_efg": Object {
      "old_value": 0.4362017804154303,
      "override": "Adjusted from Def 3P%",
      "value": 0.4550963579107124,
    },
    "def_ft": Object {
      "value": 0.7472527472527473,
    },
    "def_ftr": Object {
      "value": 0.27002967359050445,
    },
    "def_luck_diags": Object {
      "adjDef3P": 0.33266903566872214,
      "avg3PSosAdj": -0.003218182376390646,
      "avgEff": 101.8,
      "base3PSosAdj": -0.0015908882521489841,
      "baseDef3P": 0.32521489971346706,
      "baseDef3PSos": 0.3298939828080229,
      "basePoss": 2081,
      "delta3P": 0.03191715596947403,
      "deltaDefAdjEff": 2.8255848210687087,
      "deltaDefEfg": 0.018894577495282106,
      "deltaDefOrbFactor": -0.002847051752358573,
      "deltaDefPpp": 3.0072307859092504,
      "deltaDefPppNoOrb": 3.282202379335087,
      "deltaMissesPct": -0.012596384996854738,
      "deltaPtsOffMisses": -0.274971593425837,
      "luckPct": 0.66,
      "sample3PSosAdj": -0.011946015037593993,
      "sampleDef3P": 0.3007518796992481,
      "sampleDef3PRate": 0.39465875370919884,
      "sampleDef3PSos": 0.3358872180451128,
      "sampleDefEfg": 0.4362017804154303,
      "sampleDefFGA": 337,
      "sampleDefOrb": 0.22666666666666666,
      "sampleDefPpp": 93.29896907216495,
      "sampleOffSos": 108.34432989690721,
      "samplePoss": 388,
    },
    "def_orb": Object {
      "value": 0.22666666666666666,
    },
    "def_poss": Object {
      "value": 388,
    },
    "def_ppp": Object {
      "old_value": 93.29896907216495,
      "override": "Adjusted from Def 3P%",
      "value": 96.3061998580742,
    },
    "def_scramble_2p": Object {
      "value": 0.35294117647058826,
    },
    "def_scramble_2p_ast": Object {
      "value": 0,
    },
    "def_scramble_2pmid": Object {
      "value": 0,
    },
    "def_scramble_2pmid_ast": Object {
      "value": 0,
    },
    "def_scramble_2pmidr": Object {
      "value": 0.20833333333333334,
    },
    "def_scramble_2prim": Object {
      "value": 0.5,
    },
    "def_scramble_2prim_ast": Object {
      "value": 0,
    },
    "def_scramble_2primr": Object {
      "value": 0.5,
    },
    "def_scramble_3p": Object {
      "value": 0.42857142857142855,
    },
    "def_scramble_3p_ast": Object {
      "value": 1,
    },
    "def_scramble_3pr": Object {
      "value": 0.2916666666666667,
    },
    "def_scramble_assist": Object {
      "value": 0.3333333333333333,
    },
    "def_scramble_efg": Object {
      "value": 0.4375,
    },
    "def_scramble_ft": Object {
      "value": 0.6666666666666666,
    },
    "def_scramble_ftr": Object {
      "value": 0.75,
    },
    "def_scramble_ppp": Object {
      "value": 102.6438569206843,
    },
    "def_scramble_to": Object {
      "value": 0.09331259720062209,
    },
    "def_to": Object {
      "value": 0.15206185567010308,
    },
    "def_trans_2p": Object {
      "value": 0.4634146341463415,
    },
    "def_trans_2p_ast": Object {
      "value": 0,
    },
    "def_trans_2pmid": Object {
      "value": 0.2727272727272727,
    },
    "def_trans_2pmid_ast": Object {
      "value": 0,
    },
    "def_trans_2pmidr": Object {
      "value": 0.15942028985507245,
    },
    "def_trans_2prim": Object {
      "value": 0.5333333333333333,
    },
    "def_trans_2prim_ast": Object {
      "value": 0.4375,
    },
    "def_trans_2primr": Object {
      "value": 0.43478260869565216,
    },
    "def_trans_3p": Object {
      "value": 0.2857142857142857,
    },
    "def_trans_3p_ast": Object {
      "value": 0.875,
    },
    "def_trans_3pr": Object {
      "value": 0.4057971014492754,
    },
    "def_trans_assist": Object {
      "value": 0.5185185185185185,
    },
    "def_trans_efg": Object {
      "value": 0.4492753623188406,
    },
    "def_trans_ft": Object {
      "value": 0.75,
    },
    "def_trans_ftr": Object {
      "value": 0.34782608695652173,
    },
    "def_trans_ppp": Object {
      "value": 100.15022533800702,
    },
    "def_trans_to": Object {
      "value": 0.1126690035052579,
    },
    "doc_count": 72,
    "duration_mins": Object {
      "value": 220.22333333333333,
    },
    "key": "AaWiggins_AnCowan_DaMorsell_ErAyala_JaSmith",
    "off_2p": Object {
      "value": 0.5511363636363636,
    },
    "off_2p_ast": Object {
      "value": 0,
    },
    "off_2pmid": Object {
      "value": 0.2413793103448276,
    },
    "off_2pmid_ast": Object {
      "value": 0.21428571428571427,
    },
    "off_2pmidr": Object {
      "value": 0.17956656346749225,
    },
    "off_2prim": Object {
      "value": 0.7033898305084746,
    },
    "off_2prim_ast": Object {
      "value": 0.43373493975903615,
    },
    "off_2primr": Object {
      "value": 0.3653250773993808,
    },
    "off_3p": Object {
      "old_value": 0.30612244897959184,
      "override": "Luck adjusted",
      "value": 0.3174679734526933,
    },
    "off_3p_ast": Object {
      "value": 0.7777777777777778,
    },
    "off_3pr": Object {
      "value": 0.4551083591331269,
    },
    "off_adj_opp": Object {
      "value": 108.34432989690721,
    },
    "off_adj_ppp": Object {
      "old_value": 123.30858896547036,
      "override": "Adjusted from Off 3P%",
      "value": 124.4295865332912,
    },
    "off_adj_ppp_rank": 1,
    "off_assist": Object {
      "value": 0.5211267605633803,
    },
    "off_ast_3p": Object {
      "value": 0.47297297297297297,
    },
    "off_ast_mid": Object {
      "value": 0.04054054054054054,
    },
    "off_ast_rim": Object {
      "value": 0.4864864864864865,
    },
    "off_efg": Object {
      "old_value": 0.5092879256965944,
      "override": "Adjusted from Off 3P%",
      "value": 0.5170330902362813,
    },
    "off_ft": Object {
      "value": 0.7663043478260869,
    },
    "off_ftr": Object {
      "value": 0.5696594427244582,
    },
    "off_luck_diags": Object {
      "avgEff": 101.8,
      "base3PA": 765,
      "delta3P": 0.011345524473101443,
      "deltaMissesPct": -0.0051634430264579315,
      "deltaOffAdjEff": 1.1209975678208317,
      "deltaOffEfg": 0.007745164539686898,
      "deltaOffOrbFactor": -0.0014730962222976021,
      "deltaOffPpp": 1.0732295794120812,
      "deltaOffPppNoOrb": 1.2477247612562934,
      "deltaPtsOffMisses": -0.17449518184421223,
      "player3PInfo": Object {
        "Cowan, Anthony": Object {
          "base3P": 0.3218390804597701,
          "sample3PA": 174,
        },
        "Wiggins, Aaron": Object {
          "base3P": 0.31736526946107785,
          "sample3PA": 167,
        },
      },
      "regress3P": 0.3174679734526933,
      "sample3P": 0.30612244897959184,
      "sample3PA": 147,
      "sampleBase3P": 0.3196480938416422,
      "sampleDefSos": 97.46209476309228,
      "sampleOff3PRate": 0.4551083591331269,
      "sampleOffEfg": 0.5092879256965944,
      "sampleOffFGA": 323,
      "sampleOffOrb": 0.2857142857142857,
      "sampleOffPpp": 117.2069825436409,
      "samplePoss": 401,
    },
    "off_net": Object {
      "old_value": 35.440941110261065,
      "override": "Adjusted from Off 3P% and Def 3P%",
      "value": 33.736353857013185,
    },
    "off_orb": Object {
      "value": 0.2857142857142857,
    },
    "off_poss": Object {
      "value": 401,
    },
    "off_ppp": Object {
      "old_value": 117.2069825436409,
      "override": "Adjusted from Off 3P%",
      "value": 118.28021212305299,
    },
    "off_raw_net": Object {
      "old_value": 23.908013471475954,
      "override": "Adjusted from Off 3P% and Def 3P%",
      "value": 21.974012264978786,
    },
    "off_scramble_2p": Object {
      "value": 0.7,
    },
    "off_scramble_2p_ast": Object {
      "value": 0,
    },
    "off_scramble_2pmid": Object {
      "value": 0.3333333333333333,
    },
    "off_scramble_2pmid_ast": Object {
      "value": 1,
    },
    "off_scramble_2pmidr": Object {
      "value": 0.0967741935483871,
    },
    "off_scramble_2prim": Object {
      "value": 0.7647058823529411,
    },
    "off_scramble_2prim_ast": Object {
      "value": 0.07692307692307693,
    },
    "off_scramble_2primr": Object {
      "value": 0.5483870967741935,
    },
    "off_scramble_3p": Object {
      "value": 0.18181818181818182,
    },
    "off_scramble_3p_ast": Object {
      "value": 1,
    },
    "off_scramble_3pr": Object {
      "value": 0.3548387096774194,
    },
    "off_scramble_assist": Object {
      "value": 0.25,
    },
    "off_scramble_efg": Object {
      "value": 0.5483870967741935,
    },
    "off_scramble_ft": Object {
      "value": 0.875,
    },
    "off_scramble_ftr": Object {
      "value": 0.5161290322580645,
    },
    "off_scramble_ppp": Object {
      "value": 125.27964205816554,
    },
    "off_scramble_to": Object {
      "value": 0.10439970171513795,
    },
    "off_to": Object {
      "value": 0.12219451371571072,
    },
    "off_trans_2p": Object {
      "value": 0.7567567567567568,
    },
    "off_trans_2p_ast": Object {
      "value": 0,
    },
    "off_trans_2pmid": Object {
      "value": 0.3333333333333333,
    },
    "off_trans_2pmid_ast": Object {
      "value": 0,
    },
    "off_trans_2pmidr": Object {
      "value": 0.09523809523809523,
    },
    "off_trans_2prim": Object {
      "value": 0.8387096774193549,
    },
    "off_trans_2prim_ast": Object {
      "value": 0.5,
    },
    "off_trans_2primr": Object {
      "value": 0.49206349206349204,
    },
    "off_trans_3p": Object {
      "value": 0.2692307692307692,
    },
    "off_trans_3p_ast": Object {
      "value": 0.7142857142857143,
    },
    "off_trans_3pr": Object {
      "value": 0.4126984126984127,
    },
    "off_trans_assist": Object {
      "value": 0.5142857142857142,
    },
    "off_trans_efg": Object {
      "value": 0.6111111111111112,
    },
    "off_trans_ft": Object {
      "value": 0.7866666666666666,
    },
    "off_trans_ftr": Object {
      "value": 1.1904761904761905,
    },
    "off_trans_ppp": Object {
      "value": 133.82533825338254,
    },
    "off_trans_to": Object {
      "value": 0.10824108241082411,
    },
    "player_info": Object {
      "Ayala, Eric": Object {
        "code": "ErAyala",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Cowan, Anthony": Object {
        "code": "AnCowan",
        "def_adj_rtg": Object {
          "old_value": -1.7318789709773228,
          "override": "Luck adjusted",
          "value": -1.6313092738629251,
        },
        "def_orb": Object {
          "value": 0.096,
        },
        "key": "Cowan, Anthony",
        "off_3pr": Object {
          "value": 0.4887640449438202,
        },
        "off_adj_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 5.771173321511876,
        },
        "off_assist": Object {
          "value": 0.2916666666666667,
        },
        "off_ftr": Object {
          "value": 0.5955056179775281,
        },
        "off_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 116.5274146893099,
        },
        "off_usage": Object {
          "value": 0.250546350615718,
        },
        "posClass": "s-PG",
        "posConfidences": Array [
          0.7573493221063862,
          0.23785653498514026,
          0.004535396666879756,
          0.00025873437114051626,
          1.1870453146996361e-8,
        ],
      },
      "Morsell, Darryl": Object {
        "code": "DaMorsell",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Smith, Jalen": Object {
        "code": "JaSmith",
        "posClass": undefined,
        "posConfidences": undefined,
      },
      "Wiggins, Aaron": Object {
        "code": "AaWiggins",
        "def_adj_rtg": Object {
          "old_value": -3.0041172564964342,
          "override": "Luck adjusted",
          "value": -2.69043699172679,
        },
        "def_orb": Object {
          "value": 0.1380952380952381,
        },
        "key": "Wiggins, Aaron",
        "off_3pr": Object {
          "value": 0.5566666666666666,
        },
        "off_adj_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 0.7310755517188853,
        },
        "off_assist": Object {
          "value": 0.10185185185185185,
        },
        "off_ftr": Object {
          "value": 0.2,
        },
        "off_rtg": Object {
          "old_value": undefined,
          "override": undefined,
          "value": 99.19560099143102,
        },
        "off_usage": Object {
          "value": 0.20864782871120427,
        },
        "posClass": "WG",
        "posConfidences": Array [
          0.01370144662544993,
          0.37250889267731135,
          0.421320486517115,
          0.1924648271808755,
          0.000004346999248142039,
        ],
      },
    },
    "team": "Maryland",
    "total_def_poss": Object {
      "value": 388,
    },
    "total_def_scramble_poss": Object {
      "value": 32.15,
    },
    "total_def_trans_poss": Object {
      "value": 79.88,
    },
    "total_off_poss": Object {
      "value": 401,
    },
    "total_off_scramble_poss": Object {
      "value": 38.31428571428572,
    },
    "total_off_trans_poss": Object {
      "value": 101.625,
    },
    "year": "2020/21",
  },
]
`;
